# XTouch

./: .gitignore  CMakeLists.txt  README.md  sqlinit.sh  xtouch.sq
XTouch/: CMakeLists.txt
XTouch/Client/: net_client.hxx
XTouchClient/: CMakeLists.txt
XTouchClient/res/: Config  UIData
XTouchClient/res/Windows/MainWindow/: MainWindow.glade  MainWindow.glade~
XTouchClient/res/Windows/MainWindow/MainScreen/: style.css
XTouchClient/res/Windows/PaintWindow/: PaintWindow.glade  PaintWindow.glade~
XTouchClient/src/client/: Client.cxx  Client.hxx  net_client.hxx  net_common.hxx  net_connection.hxx  net_message.hxx  net_message_types.hxx  net_modules.hxx
XTouchClient/src/main/: AdminWindow.cxx  ControlPanel.cxx  DrawHelper.cxx  DrawHelper.hxx  InFolderWindow.cxx  InFolderWindow.hxx  LoginWindow.cxx  LoginWindow.hxx  MainWindow.cxx  MainWindow.hxx  ModelFileManager.cxx  ModelFileManager.hxx  OcctGtkViewer.cxx  PaintWindow.cxx  PaintWindow.hxx  SortDataManager.hxx  global.cxx  global.hxx  main.cxx
XTouchClient/src/paint/: CMakeLists.txt  paint.cpp
XTouchServer/: CMakeLists.txt  Config  net_common.hxx  net_server.hxx
XTouchServer/Server/: CMakeLists.txt
XTouchServer/src/: Server.cxx  Server.hxx  SessionManager.cxx  SessionManager.hxx  includes.hxx  main.cxx  net_client.hxx  net_common.hxx  net_connection.hxx  net_message.hxx  net_message_types.hxx  net_modules.hxx  net_server.hxx  server.cxx  server_interface.hxx
